# ahan

./: .gitignore  Cargo.toml  LICENSE  README.md  amount.ts  build.sh  schema.b64
.github/workflows/: master.yaml
Concordium/ahan-commodities/: .gitignore
Concordium/ahan-commodities/contracts/: package.json
Concordium/ahan-commodities/contracts/compliance/: contract.wasm.v1
Concordium/ahan-commodities/contracts/identity-registry/: contract.wasm.v1
Concordium/ahan-commodities/contracts/security-sft-single/: contract.wasm.v1
Concordium/ahan-commodities/frontend-dapp/: package.json
Concordium/ahan.fi-web/: package-lock.json  package.json
Concordium/ahan.fi-web/src/: App.tsx  index.css  main.tsx
Concordium/ahan.fi-web/src/config/: index.ts
Concordium/ahan.fi-web/src/contexts/: WalletState.tsx
Concordium/ahan.fi-web/src/utils/: index.ts
UI/: index.html  package.json
UI/public/: manifest.json
UI/src/: App.tsx  BrowserWallet.tsx  Footer.tsx  WalletConnect2.tsx  config.ts  index.tsx  util.ts
ahan.fi-sponsored-tx-supported/src/components/Button/: Button.scss
ahan.fi-sponsored-tx-supported/src/components/Header/: index.tsx
ahan.fi-sponsored-tx-supported/src/components/Web3Wallet/: Web3Wallet.scss  index.tsx
ahan.fi-sponsored-tx-supported/src/hooks/: useConcordiumStaking.ts
ahan.fi-sponsored-tx-supported/src/utils/: concordium-staking.ts  euroe-stablecoin.ts  types.ts
deploy-scripts/: Cargo.toml
deploy-scripts/src/: main.rs
programs/token/: Cargo.toml
programs/token/src/: lib.rs
programs/vaults/: Cargo.toml
programs/vaults/src/: lib.rs
programs/vaults/tests/: tests.rs
solana/src/: lib.rs
testing_payload/: deposit.json  mint.json  upgrade.json  vault_init.json  vault_setup.json
(+7 files in other folders)
