[package]
name = "mint_tokens"
version = "0.1.0"
authors = [ "dhruvja <dhruv@iamsizzling.com>" ]
edition = "2021"
license = "MPL-2.0"
description = "sample project to mint tokens on smart contract"

[features]
default = ["std"]
std = ["concordium-std/std", "concordium-cis2/std"]
bump_alloc = ["concordium-std/bump_alloc"]

[dependencies]
concordium-std.workspace = true
concordium-cis2.workspace = true

[dev-dependencies]
concordium-smart-contract-testing.workspace = true

[lib]
crate-type=["cdylib", "rlib"]

[profile.release]
codegen-units = 1
opt-level = "s"
