[package]
name = "vaults"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
authors = [ "dhruvja <dhruv@iamsizzling.com>" ]
description = "sample project to test vaults"

[features]
default = ["std"]
std = ["concordium-std/std"]
bump_alloc = ["concordium-std/bump_alloc"]

[dependencies]
concordium-std.workspace = true
concordium-cis2.workspace = true
mint_tokens.workspace = true

[dev-dependencies]
concordium-smart-contract-testing.workspace = true

[lib]
crate-type=["cdylib", "rlib"]

[profile.release]
opt-level = "s"
codegen-units = 1
